testsuite/bsc.evaluator/uninit/VectorUninitErr4.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling VectorUninitErr4.bsv
Warning: "VectorUninitErr4.bsv", line 8, column 3: (P0042)
  Assignment to `v' missing from some paths
code generation for sysVectorUninitErr4 starts
Error: "VectorUninitErr4.bsv", line 6, column 24: (G0028)
  `v' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "VectorUninitErr4.bsv",
  line 12, column 8.
  During elaboration of `sysVectorUninitErr4' at "VectorUninitErr4.bsv", line
  4, column 8.
